[package]
name = "arw-tauri"
version = "0.1.4"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
open = "5"
tauri = { version = "2", default-features = false, features = ["wry"] }
directories = "5"
tauri-plugin-autostart = "2"
once_cell = { workspace = true }
urlencoding = "2"

[lib]
name = "arw_tauri"
path = "src/lib.rs"
