[package]
name = "arw-wasi"
version = "0.2.0-dev"
edition = "2021"
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
reqwest = { workspace = true }
url = "2.5"
base64 = { workspace = true }
tokio = { workspace = true }
sha2 = "0.10"
async-trait = "0.1"
arw-core = { path = "../arw-core", version = "0.2.0-dev" }
