[package]
name = "arw-compress"
version = "0.2.0-dev"
edition = "2021"
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { version = "1", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
