[package]
name = "arw-launcher"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1" }
png = "0.17"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { version = "2.4.1", default-features = false, features = ["wry", "tray-icon"] }
arw-tauri = { path = "../../../crates/arw-tauri" }
tauri-plugin-single-instance = "2.2"
tauri-plugin-window-state = "2.2"
tauri-plugin-autostart = "2.2"
tauri-plugin-notification = "2.0.0"
tauri-plugin-updater = "2.0.0"
tokio = { workspace = true }

[features]
default = []
