[package]
name = "arw-launcher"
version = "0.1.4"
edition = "2021"
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.4.1" }
png = "0.18"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { version = "2.8.5", default-features = false, features = ["wry", "tray-icon"] }
arw-tauri = { path = "../../../crates/arw-tauri", version = "0.1.4" }
arw-core = { path = "../../../crates/arw-core", version = "0.1.4" }
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-autostart = "2.5.0"
tauri-plugin-notification = "2.3.1"
tauri-plugin-updater = "2.9.0"
tokio = { workspace = true }

[features]
default = []
