[package]
name = "arw-launcher"
version = "0.2.0-dev"
edition = "2021"
license.workspace = true

[build-dependencies]
tauri-build = { version = "2" }
png = "0.18"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { version = "2", default-features = false, features = ["wry", "tray-icon"] }
arw-tauri = { path = "../../../crates/arw-tauri", version = "0.2.0-dev" }
arw-core = { path = "../../../crates/arw-core", version = "0.2.0-dev" }
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tokio = { workspace = true }

[features]
default = ["desktop-launcher"]
desktop-launcher = []
launcher-linux-ui = []

[[bin]]
name = "arw-launcher"
path = "src/main.rs"
required-features = ["desktop-launcher"]
